--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,416 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	font-family: "Poppins";
+	background: #21212D;
+}
+body *{
+	margin: 0;
+	padding: 0;
+	font-family: "Poppins";
+}
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+/*   SIDEBAR     */
+.sidebar {
+	background: #2C2C38;
+	width: 300px;
+	height:81.6vh;
+	border-right: 1px solid #464656;
+}
+.sidebar__content {
+	padding: 40px;
+}
+.sidebar__content-logo {
+	width: 261px;
+    padding-left: 40px;
+}
+.sidebar__content-boards {
+}
+.sidebar__boards-title {
+	font-weight: 500;
+	font-size: 14px;
+	color: #848894;
+}
+.sidebar__boards-row {
+}
+.sidebar__board {
+	display: flex;
+	align-items: center;
+	margin-top: 30px;
+	color: #848894;
+	cursor: pointer;
+}
+.sidebar__board svg {
+	margin-top: -3px;
+	width: 16px;
+	height: 16px;
+}
+.sidebar__board-title {
+	margin-left: 10px;
+	font-size: 14px;
+	font-weight: 500;
+}
+.sidebar__board-new {
+	display: flex;
+	align-items: center;
+	color: #6560C5;
+	margin-top: 26px;
+	cursor: pointer;
+}
+.sidebar__board-active {
+	color: #6560C5;
+}
+.sidebar__board-active p {
+	font-weight: 700;
+}
+.sidebar__board-active svg {
+	stroke-width: 4;
+}
+.sidebar__board-close {
+	display: none;
+}
+header {
+	background: #2C2C38;
+	width: 100%;
+	height: 120px;
+	display: flex;
+	align-items: center;
+}
+.header__content {
+	padding-right: 40px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.header__content-title {
+	margin-left: 40px;
+	display: flex;
+	font-weight: 700;
+	font-size: 20px;
+	color: #fff;
+}
+.header__content-sidebarButton {
+	margin-right: 20px;
+	display: none;
+}
+.header__content-buttons {
+	display: flex;
+	align-items: center;
+}
+.header__content-buttons button {
+	padding: 14px 30px;
+	color: #fff;
+	font-size: 14px;
+	font-weight: 500;
+	border-radius: 300px;
+	border: 2px solid #6560C5;
+	background: #6560C5;
+	display: flex;
+	align-items: center;
+	margin-right: 20px;
+	cursor: pointer;
+}
+.header__content-buttons button svg {
+	margin-right: 6px;
+	width: 20px;
+	height: 20px;
+}
+.header__content svg{
+	cursor: pointer;
+	color: #fff;
+}
+@media only screen and (max-width: 900px) {
+	.header__content-title {
+		margin-left: 0;
+	}
+	.header__content {
+		padding-left: 40px;
+	}
+	.sidebar__content-logo {
+		display: none;
+	}
+	.sidebar {
+		display: none;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	}
+	.sidebar__board-close {
+		display: block;
+	}
+	.header__content-sidebarButton {
+		display: block;
+	}
+
+}
+@media only screen and (max-width: 600px) {
+	.header__content-buttons button {
+		padding: 10px;
+		margin-right: 0;
+	}
+	.header__content-buttons button span {
+		display: none;
+	}
+	.header__content-buttons button svg {
+		margin-right: 0;
+	}
+	.header__content-more {
+		display: none;
+	}
+}
+@media only screen and (max-width: 400px) {
+	.header__content-title span {
+		display: none;
+	}
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.content {
+	display: flex;
+	padding: 40px;
+	padding-top: 0;
+}
+.content__row {
+	margin-right: 40px;
+	margin-top: 40px;
+}
+.content__row-title { 
+	font-weight: 600;
+	font-size: 12px;
+	color: #848894;
+	display: flex;
+	align-items: center;
+}
+.content__row-title span {
+	display: block;
+	width: 16px;
+	height: 16px;
+	border-radius: 100px;
+	margin-right: 5px;
+	background: #4AC3E6;
+}
+.content__item {
+	cursor: pointer;
+	background: #2C2C38;
+	padding: 14px;
+	border-radius: 6px;
+	margin-top: 20px;
+}
+.content__item-title {
+	color: #fff;
+	font-size: 14px;
+	font-weight: 600;
+	position: relative;
+}
+.content__item-desc {
+	color: #848894;
+	font-size: 10px;
+	font-weight: 600;
+}
+
+@media only screen and (max-width: 900px) {
+	.content {
+		flex-wrap: wrap;
+	}
+}
+@media only screen and (max-width: 610px) {
+	.content {
+		justify-content: center;
+	}
+}
+@media only screen and (max-width: 530px) {
+	.content__row {
+		width: 100%;
+		margin-right: 0;
+	}
+}
+
+
+
+.create {
+	background: #2C2C38;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 40px 30px;
+	width: 350px;
+	border-radius: 14px;
+	z-index: 100;
+	box-shadow: rgb(0 0 0 / 25%) 0px 54px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px;
+}
+.create__title {
+	color: #fff;
+	font-size: 20px;
+	font-weight: 700;
+	margin-bottom: 24px;
+}
+.create__input {
+	display: flex;
+	flex-direction: column;
+	margin-top: 20px;
+}
+.create__input label {
+	margin-bottom: 6px;
+	font-size: 10px;
+	font-weight: 500;
+	color: #fff;
+}
+.create__input input {
+	border: 1px solid #848894;
+	border-radius: 6px;
+	background: transparent;
+	padding: 12px;
+	font-weight: 500;
+	color: #848894;
+}
+.create__input textarea {
+	border: 1px solid #848894;
+	border-radius: 6px;
+	background: transparent;
+	padding: 12px;
+	color: #848894;
+	font-weight: 500;
+}
+.create__input button {
+	background: #6560C5;
+	border-radius: 300px;
+	color: #fff;
+	padding: 12px 0;
+	width: 100%;
+	border: 0;
+	font-size: 12px;
+	font-weight: 600;
+	cursor: pointer;
+}
+.create__close {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	color: #fff;
+	cursor: pointer;
+}
+.create__close svg {
+	width: 14px;
+	height: 14px;
+}
+@media only screen and (max-width: 500px) {
+	.create {
+		width: 75%;
+	}
+}
+
+
+.preview {
+	box-shadow: rgb(0 0 0 / 25%) 0px 54px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px;
+	z-index: 100;
+	background: #2C2C38;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 40px 30px;
+	width: 350px;
+	border-radius: 14px;
+}
+.preview__title {
+	color: #fff;
+	font-weight: 700;
+	font-size: 20px;
+}
+.preview__desc {
+	color: #848894;
+	font-size: 12px;
+	font-weight: 400;
+	margin: 16px 0;
+	line-height: 24px;
+}
+.preview__todos {
+}
+.preview__subtitle {
+	font-size: 12px;
+	color: #fff;
+	font-weight: 500;
+	margin-bottom: 10px;
+}
+.preview__todo {
+	display: flex;
+	align-items: center;
+	background: #21212D;
+	padding: 12px 10px;
+	margin-bottom: 10px;
+}
+.preview__todo input[type='checkbox'] {
+	width: 14px;
+	height: 14px;
+	margin-right: 10px;
+}
+.preview__todo-text {
+	font-weight: 400;
+	font-size: 10px;
+	color: #848894;
+}
+.preview__buttons {
+	display: flex;
+}
+.preview__buttons button {
+	margin-right: 10px;
+	border-radius: 300px;
+	padding: 10px 26px;
+	border: 0;
+	background: #21212D;
+	color: #fff;
+	font-weight: 700;
+	font-size: 10px;
+	cursor: pointer;
+}
+.preview__close {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	color: #fff;
+	cursor: pointer;
+}
+.preview__close svg {
+	width: 14px;
+	height: 14px;
+}
+.preview__add-todo {
+	width: 100%;
+	margin-bottom: 16px;
+}
+.preview__add-todo input {
+	width: 93.5%;
+	padding: 10px;
+	background: transparent;
+	border: 2px solid #21212D;
+	font-size: 12px;
+	font-weight: 500;
+	border-radius: 4px;
+}
+@media only screen and (max-width: 530px) {
+	.preview {
+		width: 75%;
+	}
+}
+@media only screen and (max-width: 380px) {
+	.preview__buttons {
+		flex-wrap: wrap;
+	}
+	.preview__buttons button {
+		margin-top: 10px;
+	}
+}
+
+.flexCenter {
+  display: flex;
+  align-items: center;
+}
+.flex {
+  display: flex;
 }
