--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ button:focus {
 	width: 300px;
 	height:81.6vh;
 	border-right: 1px solid #464656;
+	z-index: 5;
 }
 .sidebar__content {
 	padding: 40px;
@@ -413,4 +414,7 @@ header {
 }
 .flex {
   display: flex;
+}
+.underline {
+	text-decoration: line-through;
 }
